--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -65,6 +65,8 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchange</p>
         </div>
     </section>
+    {% comment %} <img src="{% static 'interface/images/logo.png' %}"> {% endcomment %}
+    <img src="../images/logo.png">
     
     <!-- custom js link -->
     <script type="text/javascript" src="{% static 'interface/scripts.js'%}"></script>
