--- a/interface/templates/interface/countdown.html
+++ b/interface/templates/interface/countdown.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="{% static 'interface/images/favicon.ico' %}"/>
+	<link rel="icon" type="image/png" href="{% static 'interface/images/favicon.ico' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'interface/vendor/bootstrap/css/bootstrap.min.css' %}">
 <!--===============================================================================================-->
@@ -34,7 +34,6 @@
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
 				<a href="#"><img src="{% static 'interface/images/logo.png' %}" alt="LOGO" width="255.4" height="94.6"></a>
 			</div>
-            <img src="{% static 'interface/images/logo.png' %}">
 			<div class="flex-w m-t-10 m-b-10">
 				<a href="#" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
 					Sign Up
