--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -41,7 +41,7 @@
             <h1>Exclusive collection for everyone </h1>
             <a href="#" class="btn">Explore now</a>
         </div>
-        <div class="home-img"><img src="https://img.freepik.com/free-photo/romantic-female-skateboarder-trendy-glasses-posing-photo-fashionable-white-girl-with-purple-longboard-isolated_197531-20464.jpg?w=900&t=st=1701521296~exp=1701521896~hmac=9b37022483edc1dd4f0774af4befefac3a6a17adb82a30168acafea126033a76" alt="Home Image"></div>
+        <div class="home-img"><img src="{% static 'interface/images/home_image.png' %}" alt="Home Image"></div>
     </section>
 
     <!-- feature section design -->
