--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -313,11 +313,11 @@ header.sticky {
     color: red;
 
 }
-.blog-container {
+/* .blog-container {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-}
+} */
 
 .blog {
     width: 320px;
@@ -329,17 +329,18 @@ header.sticky {
 
 }
 
-.blog-container {
+/* .blog-container {
     margin-top: 40px;
-}
-.blog img {
+    background-color: green;
+} */
+/* .blog img {
     width: 80%;
     margin-top: 20px;
     margin-left: 28px;
     height: auto;
     max-height: 80%;
     object-fit: cover;
-}
+} */
 
 #blog1 {
     background-color: #eff6ff;
@@ -354,4 +355,37 @@ header.sticky {
 .blog p {
     text-align: justify;
     margin: 15px;
+}
+.blog-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 100px;
+    row-gap: 100px;
+}
+
+.blog-container img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;    
+    border: 0.1px outset #334155;
+}
+.timestamp {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 2px 4px;
+    font-style: italic;
+}
+.title {
+    font-size: 18px;
+    text-align: center;
+}
+.block {
+  padding: 60px 10px 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f3f4f4;
+  overflow-x: hidden;
+  border-radius: 20px;
 }
