--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -378,14 +378,18 @@ header.sticky {
 }
 .title {
     font-size: 18px;
-    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .block {
   padding: 60px 10px 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f3f4f4;
-  overflow-x: hidden;
+  background-color: #f9f9f9;
   border-radius: 20px;
+}
+.block div {
+    width: 80%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
