--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -97,7 +97,7 @@
                     <img src="{{product.image_url}}" alt="">
                 </div>
                 <h3>{{product.name}}</h3>
-                <h4>New Design 2023</h4>
+                <h4>{{product.description}}</h4>
                 <div class="inbox">
                     <div>
                         <a href="#" class="price">{{product.price}}VND</a>
