--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -16,7 +16,9 @@
     <!-- header section design -->
     <header>
         {% comment %} <a href="#" class="logo"><img src="img/logo.png" alt="Logo"></a> {% endcomment %}
+        <img src="{% static 'interface/images/logo.png' %}" class="logo" alt="">
         <ul class="navbar">
+            
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Shop</a></li>
