--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -31,7 +31,7 @@ header {
     align-items: center;
     justify-content: space-between;
     background: transparent;
-    padding: 2px 11% 0px;
+    padding: 2px 5% 0px;
     border-bottom: 1px solid #f7f9fb;
     transition: all .45s ease;
 }
@@ -102,7 +102,7 @@ section {
 .home {
     height: 100vh;
     width: 100%;
-    background-color: #e3ffe6;
+    background-color: #ffe1cc;
     position: relative;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -410,4 +410,9 @@ header.sticky {
     width: 80%;
     overflow-x: hidden;
     overflow-y: hidden;
+}
+.logo {
+    width: 200px;
+    height: auto;
+
 }
