--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive E-commerce Website</title>
+    <title>Brownish Clothing - Home</title>
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,12 +17,11 @@
     <header>
         {% comment %} <a href="#" class="logo"><img src="img/logo.png" alt="Logo"></a> {% endcomment %}
         <ul class="navbar">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#" class="active">Trang chủ</a></li>
+            <li><a href="#">Về chúng tôi</a></li>
             <li><a href="#">Shop</a></li>
-            <li><a href="#">Pages</a></li>
             <li><a href="{% url 'blog' %}">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Liên hệ</a></li>
         </ul>
         
         <div class="icons">
