--- a/interface/templates/interface/product_view.html
+++ b/interface/templates/interface/product_view.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brownish: View Blog</title>
+    <title>Brownish: View Product</title>
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -21,7 +21,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="#">Pages</a></li>
-            <li><a href="#" class="active">Blog</a></li>
+            <li><a href="{% url 'blog' %}">Blog</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         
@@ -35,10 +35,14 @@
     </header>
 
     <!-- home section design -->
-    <section class="viewblog">
-        <div class="blog-img"><img src={{blog.image.url}} alt="Home Image"></div>
-        <div class="blog-info">
-            <h3>{{blog.title}}</h3>
+    <section class="view_product">
+        <div class="view_product_img"><img src={{product.image_url}} alt="Home Image"></div>
+        <div class="view_product_info">
+            <h4>{{product.name}}</h4>
+            <h3>{{product.price}}VND</h3>
+            <span>{{product.category}}</span>/<span>{{product.subcategory}}</span>
+            <p>{{product.description}}</p>
+            <button type="button">Thêm vào giỏ hàng</button>
         </div>
     </section>
 
