--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -31,7 +31,7 @@ header {
     align-items: center;
     justify-content: space-between;
     /* background: #d87d48; */
-    background: transparent;
+    background: #c89494;
     padding: 2px 5% 0px;
     border-bottom: 1px solid #f7f9fb;
     transition: all .45s ease;
@@ -122,6 +122,7 @@ section {
     gap: 1.5rem;
     display: grid;
     align-items:flex-end;
+    margin-top: 100px;
 }
 
 .home-index img {
@@ -140,7 +141,7 @@ section {
 }
 .home-img img {
     padding-top: 30px;
-    width: 70%;
+    width: 100%;
     height: 70%;
     object-fit: cover;
 
@@ -375,6 +376,13 @@ header.sticky {
     overflow-y: hidden;
 
 }
+
+.viewblog {
+    height: max-content;
+    width: auto;
+    margin-top: 100px;
+}
+
 
 /* .blog-container {
     margin-top: 40px;
