--- a/interface/templates/interface/blog_view.html
+++ b/interface/templates/interface/blog_view.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brownish: View Blog</title>
+    <!-- Dưới 160 từ, tóm tắt nội dung trang, sử dụng từ khóa chính -->
+    <meta name="description" content={{blog.description}}>
+    <meta name="robots" content="index, follow">
+    <title>{{blog.title}} - Brownish Clothing</title>
+    <!--Đây là đường link gốc của chính website này.  -->
+    <link rel="canonical" href="https://brownish.store/block_view/...">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:site_name" content="Brownish Clothing - Thời trang bền vững thân thiện môi trường">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content={{blog.title}}>
+    <meta property="og:description" content={{blog.description}}>
+    <meta property="og:url" content="https://brownish.store/block_view/...">
+    <meta property="article:published_time" content={{blog.timestamp}}>
+    <meta property="article:modified_time" content={{blog.modified_timestamp}}>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content={{blog.title}}>
+    <meta name="twitter:description" content={{blog.description}}>
+    <meta name="author" content="Brownish">
+    <meta name="twitter:creator" content="@brownishvn">
+	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -35,6 +54,10 @@
     </header>
 
     <!-- home section design -->
+    <section class="home-index" style="height: 50vh;">
+        <img src="{%static 'interface/images/bg02.png' %}"> 
+    </section>
+
     <section class="viewblog">
         <div class="blog-img"><img src={{blog.image.url}} alt="Home Image"></div>
         <div class="blog-info">
