--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>Brownish</title>
-=======
     <title>Brownish Clothing - Home</title>
->>>>>>> aa706c19eb96484ca4401c390737e50ecce25c35
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -21,7 +17,7 @@
     <header>
         <a href="{% url 'index' %}"><img src="{% static 'interface/images/logo.png' %}" class="logo" alt=""></a>
         <ul class="navbar">
-            <li><a href="#" class="active">Trang chủ</a></li>
+            <li><a href="{% url 'index' %}" class="active">Trang chủ</a></li>
             <li><a href="#">Về chúng tôi</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="{% url 'blog' %}">Blog</a></li>
@@ -39,8 +35,8 @@
 
     <!-- home section design -->
     <section class="home-index">
-        <img class="slide" src="{% static 'interface/images/bg01.png' %}">
-        {% comment %} <img class="slide" src="{%static 'interface/images/bg02.png' %}"> {% endcomment %}
+        <!-- <img class="slide" src="{% static 'interface/images/bg01.png' %}"> -->
+        <img class="slide" src="{%static 'interface/images/bg02.png' %}"> 
     </section>
 
     <!-- feature section design -->
