--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -4,7 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brownish: Blogs</title>
+    <meta name="description" content="Trang Blog của Bronish Clothing chuyên cung cấp các bài viết bổ ích về chủ đề thời trang, quần áo, đời sống, đặc biệt là thời trang bền vững.">
+    <meta name="robots" content="index, follow">
+    <title>Trang Blog - Brownish Clothing</title>
+    <!--Đây là đường link gốc của chính website này.  -->
+    <link rel="canonical" href="https://brownish.store/blog/">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:site_name" content="Brownish Clothing - Thời trang bền vững thân thiện môi trường">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Trang Blog - Brownish Clothing">
+    <meta property="og:description" content="Trang Blog của Bronish Clothing chuyên cung cấp các bài viết bổ ích về chủ đề thời trang, quần áo, đời sống, đặc biệt là thời trang bền vững.">
+    <meta property="og:url" content="https://brownish.store/blog/">
+    <meta property="article:published_time" content="2023-12-06T08:06:00+00:00">
+    <meta property="article:modified_time" content="2023-12-08T09:06:00+00:00">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Trang Blog - Brownish Clothing">
+    <meta name="twitter:description" content="Trang Blog của Bronish Clothing chuyên cung cấp các bài viết bổ ích về chủ đề thời trang, quần áo, đời sống, đặc biệt là thời trang bền vững.">
+    <meta name="author" content="Brownish">
+    <meta name="twitter:creator" content="@brownishvn">
+	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -19,12 +37,11 @@
         <a href="{% url 'index' %}"><img src="{% static 'interface/images/logo.png' %}" class="logo" alt=""></a>
         {% comment %} <a href="#" class="logo"><img src="img/logo.png" alt="Logo"></a> {% endcomment %}
         <ul class="navbar">
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="{% url 'index' %}">Trang chủ</a></li>
+            <li><a href="#">Về chúng tôi</a></li>
             <li><a href="#">Shop</a></li>
-            <li><a href="#">Pages</a></li>
-            <li><a href="#" class="active">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="{% url 'blog' %}" class="active">Blog</a></li>
+            <li><a href="#">Liên hệ</a></li>
         </ul>
         
         <div class="icons">
