--- a/interface/templates/interface/blog_view.html
+++ b/interface/templates/interface/blog_view.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Dưới 160 từ, tóm tắt nội dung trang, sử dụng từ khóa chính -->
-    <meta name="description" content={{blog.description}}>
+    <meta name="description" content="{{blog.description}}">
     <meta name="robots" content="index, follow">
     <title>{{blog.title}} - Brownish Clothing</title>
     <!--Đây là đường link gốc của chính website này.  -->
-    <link rel="canonical" href="https://brownish.store/block_view/...">
+    <link rel="canonical" href="{{ request.build_absolute_uri }}">
     <meta property="og:locale" content="vi_VN">
     <meta property="og:site_name" content="Brownish Clothing - Thời trang bền vững thân thiện môi trường">
     <meta property="og:type" content="article">
-    <meta property="og:title" content={{blog.title}}>
-    <meta property="og:description" content={{blog.description}}>
-    <meta property="og:url" content="https://brownish.store/block_view/...">
-    <meta property="article:published_time" content={{blog.timestamp}}>
-    <meta property="article:modified_time" content={{blog.modified_timestamp}}>
+    <meta property="og:title" content="{{blog.title}} - Brownish Clothing">
+    <meta property="og:description" content="{{blog.description}}">
+    <meta property="og:url" content="{{ request.build_absolute_uri }}">
+    <meta property="article:published_time" content="{% if blog.timestamp %}{{ blog.timestamp|date:"c" }}{% endif %}">
+    <meta property="article:modified_time" content="{% if blog.modified_timestamp %}{{ blog.modified_timestamp|date:"c" }}{% endif %}">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content={{blog.title}}>
-    <meta name="twitter:description" content={{blog.description}}>
+    <meta name="twitter:title" content="{{blog.title}} - Brownish Clothing">
+    <meta name="twitter:description" content="{{blog.description}}">
     <meta name="author" content="Brownish">
     <meta name="twitter:creator" content="@brownishvn">
 	<meta name="twitter:site" content="@brownishvn">
@@ -36,12 +36,11 @@
     <header>
         <a href="{% url 'index' %}"><img src="{% static 'interface/images/logo.png' %}" class="logo" alt=""></a>
         <ul class="navbar">
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="{% url 'index' %}">Trang chủ</a></li>
+            <li><a href="#">Về chúng tôi</a></li>
             <li><a href="#">Shop</a></li>
-            <li><a href="#">Pages</a></li>
             <li><a href="{% url 'blog' %}" class="active">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Liên hệ</a></li>
         </ul>
         
         <div class="icons">
