--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -4,7 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brownish Clothing - Home</title>
+    <meta name="description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <meta name="robots" content="index, follow">
+    <title>Trang chủ - Brownish Clothing</title>
+    <!--Đây là đường link gốc của chính website này.  -->
+    <link rel="canonical" href="https://brownish.store/">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:site_name" content="Brownish Clothing - Thời trang bền vững thân thiện môi trường">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Trang chủ - Brownish Clothing">
+    <meta property="og:description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <meta property="og:url" content="https://brownish.store/">
+    <meta property="article:published_time" content="2023-12-06T08:06:00+00:00">
+    <meta property="article:modified_time" content="2023-12-08T09:06:00+00:00">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Trang chủ - Brownish Clothing">
+    <meta name="twitter:description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <meta name="author" content="Brownish">
+    <meta name="twitter:creator" content="@brownishvn">
+	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
