--- a/interface/templates/interface/product_view.html
+++ b/interface/templates/interface/product_view.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brownish: View Product</title>
+    <!-- Dưới 160 từ, tóm tắt nội dung trang, sử dụng từ khóa chính -->
+    <meta name="description" content="{{blog.description}}">
+    <meta name="robots" content="index, follow">
+    <title>{{product.name}} - Brownish Clothing</title>
+    <!--Đây là đường link gốc của chính website này.  -->
+    <link rel="canonical" href="{{ request.build_absolute_uri }}">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:site_name" content="Brownish Clothing - Thời trang bền vững thân thiện môi trường">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="{{product.name}} - Brownish Clothing">
+    <meta property="og:description" content="{{product.description}}">
+    <meta property="og:url" content="{{ request.build_absolute_uri }}">
+    <meta property="article:published_time" content="2023-12-06T08:06:00+00:00">
+    <meta property="article:modified_time" content="2023-12-06T08:06:00+00:00">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{product.name}} - Brownish Clothing">
+    <meta name="twitter:description" content="{{product.description}}">
+    <meta name="author" content="Brownish">
+    <meta name="twitter:creator" content="@brownishvn">
+	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,12 +36,11 @@
     <header>
         <a href="{% url 'index' %}"><img src="{% static 'interface/images/logo.png' %}" class="logo" alt=""></a>
         <ul class="navbar">
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="{% url 'index' %}">Trang chủ</a></li>
+            <li><a href="#">Về chúng tôi</a></li>
             <li><a href="#">Shop</a></li>
-            <li><a href="#">Pages</a></li>
             <li><a href="{% url 'blog' %}">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Liên hệ</a></li>
         </ul>
         
         <div class="icons">
