--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
     <meta name="robots" content="index, follow">
-    <title>Trang chủ - Brownish Clothing</title>
+    <title>Brownish Clothing - Quần áo thời trang bền vững, bảo vệ môi trường - Brownish Clothing</title>
     <!--Đây là đường link gốc của chính website này.  -->
     <link rel="canonical" href="https://brownish.store/">
     <meta property="og:locale" content="vi_VN">
