--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -27,11 +27,11 @@
             
             <a href="#"><i class="ri-user-line"></i></a>
             <a href="#"><i class="ri-shopping-cart-line"></i></a>
-            {% if user.is_authenticated %}
+            {% comment %} {% if user.is_authenticated %}
             <a href="#"><i class="ri-logout-box-line"></i></a>
             {% else %}
             <a href="#"><i class="ri-login-box-line"></i></a>
-            {% endif %}
+            {% endif %} {% endcomment %}
             
             {% comment %} <div class="bx bx-menu" id="menu-icon"></div> {% endcomment %}
         </div>
