--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -116,13 +116,13 @@
             {% for product in products %}
             <div class="box">
                 <div class="box-img">
-                    <img src="{{product.image_url}}" alt="">
+                    <a href="{% url 'product_view' product.pk %}"><img src="{{product.image_url}}" alt=""></a>
                 </div>
                 <a href="{% url 'product_view' product.pk %}"><h3>{{product.name}}</h3></a>
                 <h4>{{product.description}}</h4>
                 <div class="inbox">
                     <div>
-                        <a href="#" class="price">{{product.price}}VND</a>
+                        <a href="{% url 'product_view' product.pk %}" class="price">{{product.price}}VND</a>
                     </div>
                 <div class="heart">
                         <i class="ri-heart-line"></i>
