--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -116,7 +116,7 @@
             {% for product in products %}
             <div class="box">
                 <div class="box-img">
-                    <a style="height: 100%; width: 100%;"><img src="{{product.image_url}}" alt="" href="{% url 'product_view' product.pk %}"></a>
+                    <a style="height: 100%; width: 100%;" href="{% url 'product_view' product.pk %}"><img src="{{product.image_url}}" alt=""></a>
                 </div>
                 <a href="{% url 'product_view' product.pk %}"><h3>{{product.name}}</h3></a>
                 <h4>{{product.description}}</h4>
