--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -540,8 +540,72 @@ header.sticky {
 form {
     width: 60%;
     max-width: 500px;
-    height: 300px;
-    margin: 200px auto 0;
+    height: 400px;
+    margin: 150px auto 0;
     background-color: burlywood;
+    color: rgb(240, 91, 72);
+    border-radius: 15px;
+    padding: 20px 40px;
+    background-image: url("/static/interface/images/bg01.png");
+    background-size: cover; 
+}
+#form-background {
+    width: 100%;
+    backdrop-filter: blur(1px);
+    height: 100%;
+}
+
+.form-group {
+    width: 100%;
+}
+.form-group input {
+    width: 100%;
+    height: 2.2rem;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1.5px outset rgb(255, 141, 100);
+    font-size: 1.1rem;
+    font-weight: 600;
+    transition: all .45s ease;
+}
+.form-control:focus {
+    border: 2px outset rgb(255, 217, 187);
+    outline: none;
+
+}
+form h3 {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+form input {
+    background-color: transparent;
+}
+form input[type="submit"] {
+    margin-top: 20px;
+    display: inline-block;
+    width: 80px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(215, 98, 56);
     color: white;
+    font-weight: bold;
+    transition: all .45s ease;
+}
+
+form input[type="submit"]:hover, form input[type="submit"]:active {
+    background-color: rgb(214, 213, 211);
+    color: orangered;
+    cursor: pointer;
+}
+form span {
+    color: black;
+    background: transparent;
+    font-size: 18px;
+    font-weight: 500;
+    color:rgb(191, 80, 0);
+}
+form span a {
+    color: blue;
 }
