--- a/interface/templates/interface/login.html
+++ b/interface/templates/interface/login.html
@@ -4,7 +4,9 @@
 {% block title %}Brownish: Login{% endblock %}
 {% block body %}
     <form action="{% url 'login' %}" method="POST">
+        <div id="form-background">
         {% csrf_token %}
+        <h3>Login</h3>
     <div class="form-group">
         <input autofocus class="form-control" type="text" name="username" placeholder="Username">
     </div>
@@ -12,6 +14,8 @@
         <input class="form-control" type="password" name="password" placeholder="Password">
     </div>
     <input class="btn btn-primary" type="submit" value="Log in">
-    </form>
-    Don't have an account yet? <a href="{% url 'register' %}">Register here</a>
+    <span>Don't have an account yet? <a href="{% url 'register' %}">Register here</a></span>
+    </div>    
+</form>
+    
 {% endblock %}
