--- a/interface/templates/interface/register.html
+++ b/interface/templates/interface/register.html
@@ -3,21 +3,25 @@
 
 {% block title %}Brownish: Register{% endblock %}
 {% block body %}
-    <form action="{% url 'login' %}" method="POST">
-        {% csrf_token %}
-    <div class="form-group">
-        <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-    </div>
-    <div class="form-group">
-        <input autofocus class="form-control" type="email" name="email" placeholder="Email">
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="password" name="password" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="password" name="confirmation" placeholder="Confirmation">
-    </div>
-    <input class="btn btn-primary" type="submit" value="Register">
-    </form>
-    Already have an account? <a href="{% url 'login' %}">Login here</a>
+    <form action="{% url 'register' %}" method="POST">
+    <div id="form-background">
+            {% csrf_token %}
+            <h3>Register</h3>
+        <div class="form-group">
+            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input autofocus class="form-control" type="email" name="email" placeholder="Email">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" name="password" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" name="confirmation" placeholder="Confirmation">
+        </div>
+        <input class="btn btn-primary" type="submit" value="Register">
+        <span>Already have an account? <a href="{% url 'login' %}">Login here</a></span>
+    </div>    
+</form>
+    
 {% endblock %}
